2004-11-13  Gary Cramblitt (PhantomsDad) <garycramblitt@comcast.net>
        * Fix.  Nothing happens when clicking Configure button for Festival Interactive
          plugin if your desktop language is not English.  Display translated name for
          Synthesizer in Talkers tab.
        * Display translated words for "male", "female", "neutral", "fast", "slow", "medium",
          "loud", "soft" in KTTSMgr Talkers list and from Jobs "Change Talker" button.
        * getTalkers() not returning country code as part of Talker Code.
        * The Command plugin configuration dialog should enable OK button if %t or %f
          appear in command, or "Send data via stdin" is checked.  Also uncheck this option
          by default in order for plugin to sense proper configuration.
        * Add Jorge Luis Arzola to credits as tester.

2004-11-11  Gary Cramblitt (PhantomsDad) <garycramblitt@comcast.net>
        * Support for Festival 2.0. and Festival MultiSyn voices in FestivalInt plugin.
        * Query Festival for available voices, rather than scanning for directories.
        * Support for multiple versions of Festival executable.  Now asks for EXE path rather
          than voices path.
        * Allow preload of Festival voices that take a long time to load.
          If set, Festival is started when KTTSD starts and the voice is loaded.
        * When stopText() is called and FestivalInt plugin is synthing (not saying) using
          a pre-loaded voice, instead of killing Festival, which would cost hugely in
          re-startup time, Festival is allowed to finish synthing and result is discarded.
          This improves performance when rewinding/fastforwarding.
        * Corrected FestivalInt voices file as to voice descriptions and languages.
          Added MultiSyn voices.
        * Added accelerators and WhatsThis help to FestivalInt, Command, Epos, Flite, and Hadifix
          configuration dialogs.